# compas_slicer

./: .buildinfo  .bumpversion.cfg  .gitignore  .gitmodules  AUTHORS.md  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  MANIFEST.in  README.md  api.html  citing.html  devguide.html  environment.yml  examples.html  genindex.html  gettingstarted.html  index.html  installation.html  license.html  mkdocs.yml  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tasks.py  tutorials.html
.doctrees/: citing.doctree  devguide.doctree  environment.pickle  examples.doctree  gettingstarted.doctree  index.doctree  installation.doctree
.github/: pull_request_template.md
0.1.1/: .buildinfo  devguide.html  index.html  license.html  output.json  py-modindex.html  searchindex.js
0.1.2/: index.html  output.json  py-modindex.html
0.1.3/: search.html
0.2.1/: api.html  genindex.html  installation.html  license.html  output.json
0.3.2/: api.html  devguide.html  examples.html  installation.html  license.html  output.json  py-modindex.html
0.3.3/: devguide.html  examples.html  output.json  py-modindex.html
0.3.4/: citing.html  examples.html  license.html  output.json  tutorials.html
0.3.5/: api.html  examples.html  genindex.html  output.json  searchindex.js
0.4.0/: api.html  citing.html  genindex.html  license.html  output.json  tutorials.html
0.4.1/: .buildinfo  api.html  citing.html  devguide.html  examples.html  genindex.html  index.html  installation.html  license.html  objects.inv  output.json  py-modindex.html  search.html  tutorials.html
0.5.0/: genindex.html  objects.inv  output.json
0.6.1/: devguide.html  examples.html  objects.inv  output.json
0.6.2/: genindex.html  license.html  objects.inv  output.json  py-modindex.html
0.7.0/: genindex.html  objects.inv  output.json  output.txt
_modules/: index.html
actions/: api.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
api/: compas_slicer.html  geometry.html  post_processing.html  pre_processing.html  print_organization.html  slicers.html  utilities.html
data/: LICENSE.txt  astronaut_phil_a_ment_contours.json  box.stl  branches_16_contours.json  branches_70.stl  branches_70.stlbak  branches_70_contours.json  bunny_LOW_RES.stl  bunny_low_res_stl_contours.json  connection_three_legs.stl  connection_three_legs_contours.json  eight_eight_contours.json  gcode_test.gcode  sphere.stl  sphere_contours.json  vase.stl  vase_contours.json
docs/: .buildinfo  api.html  api.rst  citing.md  citing.rst  conf.py  contributing.md  devguide.rst  doc_versions.txt  examples.html  examples.rst  genindex.html  gettingstarted.html  gettingstarted.rst  index.html  index.md  index.rst  installation.md  installation.rst  intro.html  license.html  objects.inv  py-modindex.html  quickstart.md  search.html  searchindex.js  tutorial.rst  tutorials.rst
docsource/: api.rst  conf.py  index.rst
examples/: 01_planar_slicing_simple.html  02_curved_slicing_simple.html  02_planar_slicing_advanced.html  03_curved_slicing.html  03_curved_slicing_simple.html  1_versions_check.py  2_basic_slicing_example.gh  2_basic_slicing_example.py  3_basic_slicing_meshcut.py  4_generate_gcode_wip.py  4_visualise_overhang_rhino.py  5_robotic_printing.py  6_curved_slicing.py  7_planar_slicing_cgal.py  curved_slicing.html  example1_fdm.py  example_2_fdm.py  planar_slicing_advanced.html  planar_slicing_simple.html  test.py  versions_check.py
latest/: .buildinfo  404.html  api.html  citing.html  devguide.html  examples.html  genindex.html  index.html  installation.html  license.html  objects.inv  output.json  output.txt  py-modindex.html  search.html  searchindex.js  sitemap.xml  tutorials.html
pull_107/: api.html  citing.html  devguide.html  genindex.html  index.html  installation.html  objects.inv  output.json  searchindex.js  tutorials.html
pull_110/: .buildinfo  examples.html  genindex.html  license.html  output.json
pull_111/: genindex.html  output.json  searchindex.js
pull_112/: devguide.html  objects.inv  output.json  searchindex.js
pull_113/: .buildinfo  citing.html
pull_114/: devguide.html  output.json  py-modindex.html
pull_115/: api.html  examples.html  output.json  tutorials.html
pull_116/: .buildinfo  citing.html  examples.html  genindex.html  installation.html  objects.inv  output.json  py-modindex.html  tutorials.html
pull_117/: .buildinfo  examples.html  objects.inv
pull_118/: index.html  installation.html  output.json  search.html
pull_119/: .buildinfo  api.html  citing.html  devguide.html  examples.html  genindex.html  installation.html  license.html  objects.inv  output.json  py-modindex.html  tutorials.html
pull_121/: .buildinfo  output.json  tutorials.html
pull_122/: output.json  py-modindex.html
pull_123/: examples.html  index.html
pull_124/: devguide.html  output.json  search.html
pull_125/: output.json
pull_126/: .buildinfo  genindex.html  output.json
pull_127/: api.html  devguide.html  examples.html  index.html  installation.html  output.json  py-modindex.html  search.html  searchindex.js
pull_128/: .buildinfo  api.html  genindex.html  index.html  license.html  py-modindex.html  search.html
pull_129/: .buildinfo  index.html  objects.inv  output.json  search.html
pull_130/: api.html  genindex.html  index.html  objects.inv  output.json  search.html  tutorials.html
pull_131/: index.html  installation.html  objects.inv  output.json
pull_132/: examples.html  genindex.html  index.html  objects.inv  output.json  searchindex.js
pull_133/: api.html  devguide.html  genindex.html  objects.inv  output.json
pull_134/: .buildinfo  devguide.html  installation.html  output.json
pull_135/: api.html  citing.html  devguide.html  index.html  installation.html  output.json
pull_136/: objects.inv  output.json
pull_138/: devguide.html  output.json  searchindex.js
pull_147/: objects.inv  output.txt  search.html
pull_149/: genindex.html  objects.inv  output.json  searchindex.js  (+1 more)
(+1488 files in other folders)
